--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -7,7 +7,7 @@
 
     <div class="taille">
       <p>Desc</p>
-      <input type="text" [(ngModel)]="newArticle.desc" placeholder="Description">
+      <input type="text" [(ngModel)]="newArticle.description" placeholder="Description">
     </div>
 
     <div class="taille">
