--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
               About Us
           </a>
 
-          <a  *ngIf="authService.isAdmin()"  class="ll" routerLink="/add">
+          <a  *ngIf="authService.isAdmin()"  class="ll" routerLink="add">
             Add
         </a>
 
@@ -64,7 +64,7 @@
       </div>
 
 
-      
+
   </nav>
 
   <router-outlet></router-outlet>
