--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -2,7 +2,7 @@
   <h2>Update Article</h2>
   <form (ngSubmit)="updateArticle()">
     <label for="desc">Description:</label>
-    <input id="desc" type="text" [(ngModel)]="article.desc" name="desc" required />
+    <input id="desc" type="text" [(ngModel)]="article.description" name="desc" required />
 
     <label for="prix">Prix:</label>
     <input id="prix" type="number" [(ngModel)]="article.prix" name="prix" required />
